@@ -4,6 +4,7 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.StringTokenizer;
 
@@ -78,7 +79,7 @@ public class P2580 {
 	}
 
 	public static ArrayList<Integer> is_possible(int x, int y) {
-		ArrayList<Integer> possible = new ArrayList<Integer>(List.of(1, 2, 3, 4, 5, 6, 7, 8, 9));
+		ArrayList<Integer> possible = new ArrayList<Integer>(Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9));
 
 		for (int i = 0; i < 9; i++) {
 			if (possible.contains(sudoku[x][i]))
